<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/light_blue"
        android:padding="40dp"
        android:text="@string/date"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/black"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <ListView
        android:id="@+id/workouts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/back"
        android:layout_below="@id/title" />

    <TextView
        android:id="@+id/emptyMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/back"
        android:layout_below="@id/title"
        android:gravity="center"
        android:padding="24dp"
        android:text="@string/no_entries_yet"
        android:textSize="18sp"
        android:visibility="gone" />

</RelativeLayout>
